
[2022-05-30]
- Updated the respawn time of Ikeyen's Belongings.
- Added Fulgor Spore to the loot table of Umbraglow Stinger for the quest Fulgor Spores.
- Added Fulgor Spore to the loot table of Young Sporebat for the quest Fulgor Spores.
- Updated the flags of Fulgor Spore to allow every member of a group to loot it.
- Updated the respawn time of Dead Mire Soil.
- Added Feralfen Idol to the loot table of Feralfen Hunter for the quest Idols of the Feralfen.
- Added Feralfen Idol to the loot table of Feralfen Mystic for the quest Idols of the Feralfen.
- Added Feralfen Idol to the loot table of Feralfen Druid for the quest Idols of the Feralfen.
- Updated the flags of Feralfen Idol to allow every member of a group to loot it.

[2022-05-31]
- Added the script for Nagrand to make the quest HELP! trigger for every member of a group.
- Added Telaar Supply Crate to the loot table of Warmaul Warlock for the quest The Ravaged Caravan.
- Added Telaar Supply Crate to the loot table of Warmaul Brute for the quest The Ravaged Caravan.
- Updated the flags of Telaar Supply Crate to allow every member of a group to loot it.
- Added Kil'sorrow Armaments to the loot table of Kil'sorrow Spellbinder for the quest Armaments for Deception.
- Added Kil'sorrow Armaments to the loot table of Kil'sorrow Cultist for the quest Armaments for Deception.
- Added Kil'sorrow Armaments to the loot table of Kil'sorrow Deathsworn for the quest Armaments for Deception.

[2022-06-01]
- Updated the respawn time of Grulloc's Sack.

[2022-06-02]
- Added Fel Reaver Part to the loot table of Gan'arg Engineer for the quest One Demon's Trash...
- Updated the flags of Fel Reaver Part to allow every member of a group to loot it.
- Added Ivory Bell to the loot table of Ripfang Lynx for the quest New Opportunities.
- Added Ivory Bell to the loot table of Barbscale Crocolisk for the quest New Opportunities.
- Updated the flags of Ivory Bell to allow every member of a group to loot it.